dataset1235/2025-2/610742602/users/1691202220/executions/677928262_704983377.log
== RUN (2025-08-26 21:45:51)
-- CODE: 
# Leitura dos números
X = int(input("Digite o valor de X:"))
Y = int(input("Digite o valor de Y:"))

# 1. Quociente da divisão inteira
quociente_inteiro = X // Y
# 2. Resto da divisão inteira
resto_inteiro = X % Y

# 3. Quociente da divisão real
quociente_real = X / Y

# 4. Produto de x vezes Y
produto = X * Y

# 5. Valor de Y elevado à terceira potência
potencia = Y ** 3

# 5. impressão ma ordem solicitada
print(quociente_inteiro)
print(resto)
print(quociente_real)
print(produto)
print(potencia)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:55:31)
-- CODE: 
X = int(input("Digite o valor de X: ")
Y = int(input("Digite o valor de Y: ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    X = int(input("Digite o valor de X: ")
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    X = int(input("Digite o valor de X: ")
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    X = int(input("Digite o valor de X: ")
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    X = int(input("Digite o valor de X: ")
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    X = int(input("Digite o valor de X: ")
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    X = int(input("Digite o valor de X: ")
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:49:24)
-- CODE: 

X = int(input("Digite o valor de X:"))
Y = int(input("Digite o valor de Y:"))

# 1. Quociente da divisão inteira
quociente_inteiro = X // Y
# 2. Resto da divisão inteira
resto_inteiro = X % Y

# 3. Quociente da divisão real
quociente_real = X / Y

# 4. Produto de x vezes Y
produto = X * Y

# 5. Valor de Y elevado à terceira potência
potencia = Y ** 3

# 5. impressão ma ordem solicitada
print(quociente_inteiro)
print(resto)
print(quociente_real)
print(produto)
print(potencia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:49:30)
-- CODE: 

X = int(input("Digite o valor de X:"))
Y = int(input("Digite o valor de Y:"))

# 1. Quociente da divisão inteira
quociente_inteiro = X // Y
# 2. Resto da divisão inteira
resto_inteiro = X % Y

# 3. Quociente da divisão real
quociente_real = X / Y

# 4. Produto de x vezes Y
produto = X * Y

# 5. Valor de Y elevado à terceira potência
potencia = Y ** 3

# 5. impressão ma ordem solicitada
print(quociente_inteiro)
print(resto)
print(quociente_real)
print(produto)
print(potencia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:57:59)
-- CODE: 

X = int(input("Digite o valor de X:"))
Y = int(input("Digite o valor de Y:"))

# 1. Quociente da divisão inteira
quociente_inteiro = X // Y
# 2. Resto da divisão inteira
resto_inteiro = X % Y

# 3. Quociente da divisão real
quociente_real = X / Y

# 4. Produto de x vezes Y
produto = X * Y

# 5. Valor de Y elevado à terceira potência
potencia = Y ** 3

# 5. impressão ma ordem solicitada
print(quociente_inteiro)
print(resto)
print(quociente_real)
print(produto)
print(potencia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:58:33)
-- CODE: 

X = int(input("Digite o valor de X:"))
Y = int(input("Digite o valor de Y:"))

# 1. Quociente da divisão inteira
quociente_inteiro = X // Y
# 2. Resto da divisão inteira
resto_inteiro = X % Y

# 3. Quociente da divisão real
quociente_real = X / Y

# 4. Produto de x vezes Y
produto = X * Y

# 5. Valor de Y elevado à terceira potência
potencia = Y ** 3

# 5. impressão ma ordem solicitada
print(quociente_inteiro)
print(resto_inteiro)
print(quociente_real)
print(produto)
print(potencia)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:48:40)
-- CODE: 

X = int(input("Digite o valor de X:"))
Y = int(input("Digite o valor de Y:"))

# 1. Quociente da divisão inteira
quociente_inteiro = X // Y
# 2. Resto da divisão inteira
resto_inteiro = X % Y

# 3. Quociente da divisão real
quociente_real = X / Y

# 4. Produto de x vezes Y
produto = X * Y

# 5. Valor de Y elevado à terceira potência
potencia = Y ** 3

# 5. impressão ma ordem solicitada
print(quociente_inteiro)
print(resto)
print(quociente_real)
print(produto)
print(potencia)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:18:58)
-- CODE: 
# Leitura dos números
X = int(input("Digite o valor de X: "))
Y = int(input("Digite o valor de Y: "))

# Divisão inteira
quociente_inteiro = X // Y
resto = X % Y

# Divisão real
quociente_real = X / Y

# Produto
produto = X * Y

# Potência
potencia = Y ** 3

# saída
print("Quociente da divisão inteira:", quociente_inteiro)
print("Resto da divisão inteira:", resto)
print("Quociente da divisão real:", quociente_real)
print("Produto de X vezes Y:", produto)
print("Valor de Y elevado à terceira potência:", potencia)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Valor de Y elevado à terceira potência: 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Valor de Y elevado à terceira potência: 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Valor de Y elevado à terceira potência: 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Valor de Y elevado à terceira potência: 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Valor de Y elevado à terceira potência: 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Valor de Y elevado à terceira potência: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:16:32)
-- CODE: 
# Leitura dos números
X = int(input("Digite o valor de X: "))
Y = int(input("Digite o valor de Y: "))

# Divisão inteira
quociente_inteiro = X // Y
resto = X % Y

# Divisão real
quociente_real = X / Y

# Produto
produto = X * Y

# Potência
potencia = Y ** 3

# saída
print("Quociente da divisão inteira:", quociente_inteiro)
print("Resto da divisão inteira:", resto)
print("Quociente da divisão real:", quociente_real)
print("Produto de X vezes Y:", produto)
print("Valor de Y elevado à terceira potência:", potencia)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Valor de Y elevado à terceira potência: 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Valor de Y elevado à terceira potência: 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Valor de Y elevado à terceira potência: 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Valor de Y elevado à terceira potência: 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Valor de Y elevado à terceira potência: 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Valor de Y elevado à terceira potência: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:41:51)
-- CODE: 
# Leitura dos números
X = int(input("Digite o valor de X:"))
Y = int(input("Digite o valor de Y:"))

# Divisão inteira
quociente_inteiro = X // Y
resto_inteiro = X % Y

# Divisão real
quociente_real = X / Y

# Produto
produto = X * Y

# Potência
potencia = Y ** 3

# saída
print(quociente_inteiro)
print(resto)
print(quociente_real)
print(produto)
print(potencia)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:19:18)
-- CODE: 
# Leitura dos números
X = int(input("Digite o valor de X: "))
Y = int(input("Digite o valor de Y: "))

# Divisão inteira
quociente_inteiro = X // Y
resto = X % Y

# Divisão real
quociente_real = X / Y

# Produto
produto = X * Y

# Potência
potencia = Y ** 3

# saída
print("Quociente da divisão inteira:", quociente_inteiro)
print("Resto da divisão inteira:", resto)
print("Quociente da divisão real:", quociente_real)
print("Produto de X vezes Y:", produto)
print("Valor de Y elevado à terceira potência:", potencia)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Valor de Y elevado à terceira potência: 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Valor de Y elevado à terceira potência: 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Valor de Y elevado à terceira potência: 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Valor de Y elevado à terceira potência: 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Valor de Y elevado à terceira potência: 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Valor de Y elevado à terceira potência: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:55:52)
-- CODE: 
X = int(input("Digite o valor de X: "))
Y = int(input("Digite o valor de Y: "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Digite o valor de X: Digite o valor de Y:
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Digite o valor de X: Digite o valor de Y:
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Digite o valor de X: Digite o valor de Y:
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Digite o valor de X: Digite o valor de Y:
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Digite o valor de X: Digite o valor de Y:
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Digite o valor de X: Digite o valor de Y:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:58:06)
-- CODE: 

X = int(input("Digite o valor de X:"))
Y = int(input("Digite o valor de Y:"))

# 1. Quociente da divisão inteira
quociente_inteiro = X // Y
# 2. Resto da divisão inteira
resto_inteiro = X % Y

# 3. Quociente da divisão real
quociente_real = X / Y

# 4. Produto de x vezes Y
produto = X * Y

# 5. Valor de Y elevado à terceira potência
potencia = Y ** 3

# 5. impressão ma ordem solicitada
print(quociente_inteiro)
print(resto)
print(quociente_real)
print(produto)
print(potencia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:41:42)
-- CODE: 
# Leitura dos números
X = int(input("Digite o valor de X:"))
Y = int(input("Digite o valor de Y:"))

# Divisão inteira
quociente_inteiro = X // Y
resto_inteiro = X % Y

# Divisão real
quociente_real = X / Y

# Produto
produto = X * Y

# Potência
potencia = Y ** 3

# saída
print(quociente_inteiro)
print(resto)
print(quociente_real)
print(produto)
print(potencia)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:34:13)
-- CODE: 
# Leitura dos números
X = int(input("Digite o valor de X:"))
Y = int(input("Digite o valor de Y:"))

# Divisão inteira
quociente_inteiro = X // Y
resto = X % Y

# Divisão real
quociente_real = X / Y

# Produto
produto = X * Y

# Potência
potencia = Y ** 3

# saída
print("Quociente da divisão inteira:", quociente_inteiro)
print("Resto da divisão inteira:", resto)
print("Quociente da divisão real:", quociente_real)
print("Produto de X vezes Y:", produto)
print("Valor de Y elevado à terceira potência:", potencia)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Valor de Y elevado à terceira potência: 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Valor de Y elevado à terceira potência: 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Valor de Y elevado à terceira potência: 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Valor de Y elevado à terceira potência: 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Valor de Y elevado à terceira potência: 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Valor de Y elevado à terceira potência: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:46:13)
-- CODE: 
# Leitura dos números
X = int(input("Digite o valor de X:"))
Y = int(input("Digite o valor de Y:"))

# 1. Quociente da divisão inteira
quociente_inteiro = X // Y
# 2. Resto da divisão inteira
resto_inteiro = X % Y

# 3. Quociente da divisão real
quociente_real = X / Y

# 4. Produto de x vezes Y
produto = X * Y

# 5. Valor de Y elevado à terceira potência
potencia = Y ** 3

# 5. impressão ma ordem solicitada
print(quociente_inteiro)
print(resto)
print(quociente_real)
print(produto)
print(potencia)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(resto)
          ^^^^^
NameError: name 'resto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
